@@ -1,6 +1,7 @@
 package com.app.octo.service.impl;
 
 import com.app.octo.dto.request.RoomRequestDTO;
+import com.app.octo.dto.request.RoomIdRequestDTO;
 import com.app.octo.dto.request.RoomUpdateStatusRequestDTO;
 import com.app.octo.dto.response.RoomResponseDTO;
 import com.app.octo.model.Category;
@@ -10,19 +11,21 @@ import com.app.octo.model.exception.AppException;
 import com.app.octo.repository.CategoryRepository;
 import com.app.octo.repository.RoomRepository;
 import com.app.octo.service.RoomService;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class RoomServiceImpl implements RoomService {
 
     private final RoomRepository roomRepository;
-
     private final CategoryRepository categoryRepository;
+
+    private static final String ROOM_NOT_FOUND_MESSAGE = "Room not found with id: ";
 
     public RoomServiceImpl(RoomRepository roomRepository, CategoryRepository categoryRepository) {
         this.roomRepository = roomRepository;
@@ -32,19 +35,21 @@ public class RoomServiceImpl implements RoomService {
     @Override
     public List<RoomResponseDTO> getAllRooms() {
         List<Room> rooms = roomRepository.findAll();
-        return rooms.stream().map(this::mapToResponse).collect(Collectors.toList());
+        return rooms.stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
     @Override
-    public RoomResponseDTO getRoomById(long roomId) {
+    public RoomResponseDTO getRoomById(RoomIdRequestDTO roomIdRequest) {
+        Long roomId = roomIdRequest.getRoomId();
         Room room = roomRepository.findById(roomId)
-                .orElseThrow(() -> new RuntimeException("Room not found with id: " + roomId));
+                .orElseThrow(() -> new RuntimeException(ROOM_NOT_FOUND_MESSAGE + roomId));
         return mapToResponse(room);
     }
 
     @Override
     public RoomResponseDTO createRoom(RoomRequestDTO roomRequest) {
-
         Category category = categoryRepository.findByCategoryId(roomRequest.getCategoryId());
 
         if (Objects.isNull(category)) {
@@ -63,26 +68,30 @@ public class RoomServiceImpl implements RoomService {
     }
 
     @Override
-    public RoomResponseDTO updateStatus(long id, RoomUpdateStatusRequestDTO roomUpdateStatus) {
-        Room room = roomRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Room with ID " + id + " not found"));
+    public RoomResponseDTO updateStatus(RoomUpdateStatusRequestDTO roomUpdateStatus) {
+        long roomId = roomUpdateStatus.getRoomId();
 
-        room.setStatus(roomUpdateStatus.getStatus());
-        Room updatedRoom = roomRepository.save(room);
-        return new RoomResponseDTO(
-                updatedRoom.getRoomId(),
-                updatedRoom.getRoomNumber(),
-                updatedRoom.getStatus(),
-                updatedRoom.getFloor(),
-                updatedRoom.getRoomDescription(),
-                updatedRoom.getCategory().getCategoryName()
-        );
+        if (!roomRepository.existsById(roomId)) {
+            throw new EntityNotFoundException("Room with ID " + roomId + " not found.");
+        }
+
+        Optional<Room> room = roomRepository.findById(roomId);
+
+        if (room.isPresent()) {
+            Room roomToUpdate = room.get();
+            roomToUpdate.setStatus(roomUpdateStatus.getStatus());
+            Room updatedRoom = roomRepository.save(roomToUpdate);
+            return mapToResponse(updatedRoom);
+        } else {
+            throw new EntityNotFoundException("Room with ID " + roomId + " not found.");
+        }
     }
 
     @Override
-    public void deleteRoom(long roomId) {
+    public void deleteRoom(RoomIdRequestDTO roomIdRequest) {
+        long roomId = roomIdRequest.getRoomId();
         Room room = roomRepository.findById(roomId)
-                .orElseThrow(() -> new RuntimeException("Room not found with id: " + roomId));
+                .orElseThrow(() -> new RuntimeException(ROOM_NOT_FOUND_MESSAGE + roomId));
         roomRepository.delete(room);
     }
 
@@ -98,7 +107,7 @@ public class RoomServiceImpl implements RoomService {
                 room.getStatus(),
                 room.getFloor(),
                 room.getRoomDescription(),
-                room.getCategory().getCategoryName()
+                room.getCategory()
         );
     }
 }
